fixing header overflow auto

--- a/styles/index.css
+++ b/styles/index.css
@@ -643,8 +643,8 @@ address {
 
 @media (max-width: 576px) {
 
-  html {
-    overflow: hidden;
+  body {
+    overflow: auto;
   }
 
   .logo h1 {
